[gd_scene load_steps=10 format=2]

[ext_resource path="res://components/config/config_templates/component_config_complex.gd" type="Script" id=1]
[ext_resource path="res://assets/icons/icon_128_collapse.svg" type="Texture" id=2]
[ext_resource path="res://assets/icons/icon_128_expand.svg" type="Texture" id=3]
[ext_resource path="res://components/config/config_templates/component_config_add_custom_tooltip.gd" type="Script" id=4]

[sub_resource type="StyleBoxFlat" id=8]
content_margin_top = 2.0
content_margin_bottom = 4.0
bg_color = Color( 0.0392157, 0.145098, 0.247059, 1 )
border_color = Color( 0, 0.329412, 0.639216, 1 )
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
expand_margin_left = 8.0

[sub_resource type="DynamicFontData" id=2]
font_path = "res://assets/theme/Barlow-Regular.ttf"

[sub_resource type="DynamicFont" id=3]
size = 13
use_mipmaps = true
use_filter = true
font_data = SubResource( 2 )

[sub_resource type="StyleBoxEmpty" id=7]
content_margin_left = 10.0

[sub_resource type="StyleBoxFlat" id=5]
content_margin_left = 20.0
content_margin_right = 0.0
content_margin_top = 10.0
content_margin_bottom = 20.0
bg_color = Color( 0.0470588, 0.0941176, 0.133333, 1 )
border_width_left = 5
border_width_bottom = 4
border_color = Color( 0.0392157, 0.145098, 0.247059, 1 )
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
expand_margin_left = 8.0
expand_margin_top = 8.0

[node name="TemplateComplex" type="VBoxContainer"]
margin_top = 12.0
margin_right = 1900.0
margin_bottom = 84.0
script = ExtResource( 1 )

[node name="HeaderBG" type="PanelContainer" parent="."]
margin_right = 1900.0
margin_bottom = 43.0
custom_styles/panel = SubResource( 8 )
script = ExtResource( 4 )

[node name="Header" type="VBoxContainer" parent="HeaderBG"]
margin_top = 2.0
margin_right = 1900.0
margin_bottom = 39.0
custom_constants/separation = 0

[node name="Top" type="HBoxContainer" parent="HeaderBG/Header"]
margin_right = 1900.0
margin_bottom = 21.0

[node name="Expand" type="TextureButton" parent="HeaderBG/Header/Top"]
modulate = Color( 0.537255, 0.819608, 0.945098, 1 )
margin_right = 10.0
margin_bottom = 21.0
rect_min_size = Vector2( 10, 21 )
toggle_mode = true
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 3 )
expand = true
stretch_mode = 5

[node name="Name" type="Label" parent="HeaderBG/Header/Top"]
margin_left = 14.0
margin_right = 314.0
margin_bottom = 21.0
rect_min_size = Vector2( 300, 0 )
mouse_filter = 1
text = "Test"

[node name="VarValueIsNull" type="Label" parent="HeaderBG/Header/Top"]
visible = false
modulate = Color( 1, 1, 1, 0.439216 )
margin_left = 50.0
margin_right = 1900.0
margin_bottom = 20.0
rect_min_size = Vector2( 300, 0 )
size_flags_horizontal = 3
text = "= null"

[node name="ButtonSetToNull" type="Button" parent="HeaderBG/Header/Top"]
visible = false
margin_left = 1848.0
margin_right = 1900.0
margin_bottom = 24.0
rect_min_size = Vector2( 60, 0 )
focus_mode = 0
size_flags_horizontal = 10
enabled_focus_mode = 0
text = "set null"
flat = true

[node name="ButtonAddValue" type="Button" parent="HeaderBG/Header/Top"]
visible = false
margin_left = 1866.0
margin_right = 1900.0
margin_bottom = 24.0
rect_min_size = Vector2( 60, 0 )
focus_mode = 0
size_flags_horizontal = 10
enabled_focus_mode = 0
text = "add"
flat = true

[node name="Description" type="Label" parent="HeaderBG/Header"]
modulate = Color( 1, 1, 1, 0.54902 )
margin_top = 21.0
margin_right = 1900.0
margin_bottom = 37.0
mouse_filter = 1
custom_fonts/font = SubResource( 3 )
custom_styles/normal = SubResource( 7 )
text = "Description"

[node name="HSeparator" type="HSeparator" parent="HeaderBG/Header"]
visible = false
modulate = Color( 1, 1, 1, 0.352941 )
margin_top = 36.0
margin_right = 1900.0
margin_bottom = 36.0
size_flags_horizontal = 3
custom_constants/separation = 0

[node name="Margin" type="PanelContainer" parent="."]
show_behind_parent = true
margin_top = 47.0
margin_right = 1900.0
margin_bottom = 77.0
custom_styles/panel = SubResource( 5 )

[node name="Content" type="VBoxContainer" parent="Margin"]
margin_left = 20.0
margin_top = 10.0
margin_right = 1900.0
margin_bottom = 10.0
custom_constants/separation = 10

[connection signal="gui_input" from="HeaderBG/Header" to="." method="_on_Header_gui_input"]
[connection signal="toggled" from="HeaderBG/Header/Top/Expand" to="." method="_on_Expand_toggled"]
[connection signal="pressed" from="HeaderBG/Header/Top/ButtonSetToNull" to="." method="_on_ButtonSetToNull_pressed"]
[connection signal="pressed" from="HeaderBG/Header/Top/ButtonAddValue" to="." method="_on_ButtonAddValue_pressed"]
